# cppfront-test

./: .copier-answers.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  mkdocs.yml  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  semantic-release.yml
cmake/: ConfigureDocs.cmake
cmake/vcpkg/: vcpkg.toolchain.cmake
cmake/vcpkg/ports/cppfront/: CMakeLists.txt  CppfrontHelpers.cmake  cppfront-config.cmake.in  portfile.cmake  vcpkg.json
src/regressoin/: CMakeLists.txt
src/regressoin/src/: main.cpp2
src/regressoin/tests/: CMakeLists.txt  mix.cpp2
